# saida

./: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
benchmarks/datasets/: ops_notes.txt  revenue.csv
benchmarks/suites/: core_v1.json
spec_tests/: test_agent_ingestion.py  test_analytics_safety.py  test_benchmark_gate.py  test_benchmarking.py  test_connectors_e2e_db.py  test_connectors_real.py  test_integration_postgres_pgvector.py  test_query_flow.py
src/saida/agent/: agent.py
src/saida/analytics/: sql_planner.py  sql_validator.py
src/saida/benchmarking/: ci_gate.py  suite.py
src/saida/connectors/: gdrive.py  mysql.py  postgres.py
src/saida/ingestion/: profiler.py
src/saida/llm/: mock.py
src/saida/orchestration/: langchain_orchestrator.py  llm_guard.py
src/saida/semantic/: store.py
src/saida/storage/: control_plane.py  db.py  parquet_store.py  schema.py
src/saida/utils/: config.py
src/saida_core/: __init__.py
src/saida_core/cli/: main.py
src/saida_core/config/: defaults.yaml
src/saida_core/observability/: logging.py  metrics.py  tracing.py
tests/e2e/: test_analytics_flow.py  test_rag_flow.py
tests/integration/data_sources/: test_sql_connector.py
tests/integration/llm/: test_openai_adapter.py  test_openai_embeddings_adapter.py
tests/integration/vector_store/: test_chroma_adapter.py
tests/unit/adapters/: test_local_fs_connector.py  test_local_fs_parser.py
tests/unit/core/: test_document_ingest_pipeline.py  test_registry.py  (+1 more)
(+47 files in other folders)
