[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saida-core"
version = "0.1.0"
description = "SAIDA.ai Core - Strategic Artificial Intelligence for Data & Analytics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
saida-core = "saida_core.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]